# IndustrialControllerEmulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: main.cpp
src/Core/: controlleremulator.cpp  controlleremulator.h
src/UI/: circlewidget.cpp  circlewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
